src/objects/cscfga__Product_Basket__c.object
<CustomObject>
    <description>Basket to supercede bundles...</description>
    <fields>
        <fullName>Account_Lapse_Date__c</fullName>
        <formula>IF( ISNULL(TEXT(csbb__Account__r.Priced_Quote_Valid_for_Days__c) ) ,NULL, Quote_Created_Date__c+VALUE(TEXT(csbb__Account__r.Priced_Quote_Valid_for_Days__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Lapse Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LG_AdminContactDateofBirth__c</fullName>
        <label>Admin Contact Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LG_AdminContactEmail__c</fullName>
        <label>Admin Contact Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_AdminContactFirstName__c</fullName>
        <label>Admin Contact First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_AdminContactId__c</fullName>
        <label>Admin Contact Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_AdminContactLastName__c</fullName>
        <label>Admin Contact Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_AdminContactMiddleName__c</fullName>
        <label>Admin Contact Middle Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_AdminContactMobile__c</fullName>
        <label>Admin Contact Mobile</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_AdminContactPhone__c</fullName>
        <label>Admin Contact Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_AdminContactPicklist__c</fullName>
        <description>A picklist field to be used inside CSA.</description>
        <label>Admin Contact</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>(new Contact)</fullName>
                    <default>true</default>
                    <label>(new Contact)</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_AdminContactSalutation__c</fullName>
        <label>Admin Contact Salutation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mr.</fullName>
                </value>
                <value>
                    <fullName>Ms.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_BankAccountName__c</fullName>
        <label>Bank Account Holder</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_BankNumber__c</fullName>
        <label>Bank Number (IBAN)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_BasketNumber__c</fullName>
        <displayFormat>B{0000000}</displayFormat>
        <label>Basket Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>LG_BillingAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Account</label>
        <referenceTo>csconta__Billing_Account__c</referenceTo>
        <relationshipLabel>Product Baskets</relationshipLabel>
        <relationshipName>Product_Baskets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LG_BillingChannel__c</fullName>
        <label>Billing Channel</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Paper</fullName>
                    <default>true</default>
                    <label>Paper</label>
                </value>
                <value>
                    <fullName>E-Mail PDF</fullName>
                </value>
                <value>
                    <fullName>Paper + E-Mail PDF</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_BillingCity__c</fullName>
        <label>Billing City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_BillingCountry__c</fullName>
        <label>Billing Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Germany</fullName>
                    <default>true</default>
                    <label>Germany</label>
                </value>
                <value>
                    <fullName>Netherlands</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_BillingEmailAddress__c</fullName>
        <label>Billing Email Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_BillingHouseNumberExtension__c</fullName>
        <label>Billing House Number Extension</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_BillingHouseNumber__c</fullName>
        <label>Billing House Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_BillingPostalCode__c</fullName>
        <label>Billing Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_BillingSameAsInstallationAddress__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A checkbox field to be used inside CSA. Custom logic attached to this field to copy values from installation fields to billing address fields.</description>
        <label>Same as installation address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LG_BillingStateProvince__c</fullName>
        <label>Billing State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_BillingStreet__c</fullName>
        <label>Billing Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_COAXConnectionLocation__c</fullName>
        <label>COAX Connection Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_ClientNumber__c</fullName>
        <description>Client number</description>
        <inlineHelpText>Client number</inlineHelpText>
        <label>Client number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_CreatedFrom__c</fullName>
        <label>Created From</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Web</fullName>
                    <default>true</default>
                    <label>Web</label>
                </value>
                <value>
                    <fullName>Tablet</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_CustomerReference__c</fullName>
        <label>Customer reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_DTV__c</fullName>
        <description>DTV</description>
        <label>DTV</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                    <default>true</default>
                    <label>N/A</label>
                </value>
                <value>
                    <fullName>Keep</fullName>
                </value>
                <value>
                    <fullName>Terminate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_Downgrade__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked - MACD Migrate is being considered as Downgrade.</description>
        <label>Downgrade</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LG_EarliestInstallationDate__c</fullName>
        <label>Earliest Installation Date</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_ExistingSubscription__c</fullName>
        <label>Existing subscription</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                    <default>true</default>
                    <label>N/A</label>
                </value>
                <value>
                    <fullName>Residential without internet</fullName>
                </value>
                <value>
                    <fullName>Residential with internet</fullName>
                </value>
                <value>
                    <fullName>Soho 1P/5P</fullName>
                </value>
                <value>
                    <fullName>Office basis</fullName>
                </value>
                <value>
                    <fullName>Connect ZZP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_IPAddress__c</fullName>
        <label>IP Address</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                    <default>true</default>
                    <label>N/A</label>
                </value>
                <value>
                    <fullName>Keep</fullName>
                </value>
                <value>
                    <fullName>Terminate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_InstallValidationResult__c</fullName>
        <label>Install Validation Result</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not checked</fullName>
                    <default>true</default>
                    <label>Not checked</label>
                </value>
                <value>
                    <fullName>Invalid</fullName>
                </value>
                <value>
                    <fullName>Valid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_InstallationCity__c</fullName>
        <label>Installation City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_InstallationCountry__c</fullName>
        <label>Installation Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Germany</fullName>
                    <default>true</default>
                    <label>Germany</label>
                </value>
                <value>
                    <fullName>Netherlands</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_InstallationD2DOffline__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Installation D2D Offline</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LG_InstallationDigitalAvailable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Installation Digital Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LG_InstallationHouseNumberExtension__c</fullName>
        <label>Installation House Number Extension</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_InstallationHouseNumber__c</fullName>
        <label>Installation House Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_InstallationInternetAvailable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Installation Internet Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LG_InstallationPostalCode__c</fullName>
        <label>Installation Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_InstallationStateProvince__c</fullName>
        <label>Installation State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_InstallationStreet__c</fullName>
        <label>Installation Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_MainReasonLost__c</fullName>
        <label>Main Reason Lost</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Delivery</fullName>
                </value>
                <value>
                    <fullName>Price is not attractive enough</fullName>
                </value>
                <value>
                    <fullName>Product doesn&apos;t match needs customer</fullName>
                </value>
                <value>
                    <fullName>Loyal to current provider</fullName>
                </value>
                <value>
                    <fullName>Switch is too much hassle</fullName>
                </value>
                <value>
                    <fullName>Not satisfied with quality UPC/Ziggo</fullName>
                </value>
                <value>
                    <fullName>Afraid to change vendor</fullName>
                </value>
                <value>
                    <fullName>Does not appreciate telemarketing/d2d sales</fullName>
                </value>
                <value>
                    <fullName>Decision made primary office</fullName>
                </value>
                <value>
                    <fullName>Stuck in existing contract</fullName>
                </value>
                <value>
                    <fullName>Bad experience with Ziggo in retail market</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Other reasons</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_MarketSegment__c</fullName>
        <label>Market Segment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_PaymentTerms__c</fullName>
        <label>Payment Terms</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>30 Days</fullName>
                    <default>true</default>
                    <label>30 Days</label>
                </value>
                <value>
                    <fullName>60 Days</fullName>
                </value>
                <value>
                    <fullName>90 Days</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_PaymentType__c</fullName>
        <label>Payment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Self-payer</fullName>
                </value>
                <value>
                    <fullName>Direct Debit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_PostalCity__c</fullName>
        <label>Postal City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_PostalCountry__c</fullName>
        <label>Postal Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Germany</fullName>
                    <default>true</default>
                    <label>Germany</label>
                </value>
                <value>
                    <fullName>Netherlands</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_PostalHouseNumberExtension__c</fullName>
        <label>Postal House Number Extension</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LG_PostalHouseNumber__c</fullName>
        <label>Postal House Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_PostalPostalCode__c</fullName>
        <label>Postal Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_PostalSameAsInstallationAddress__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A checkbox field to be used inside CSA. Custom logic attached to this field to copy values from installation fields to postal address fields.</description>
        <label>Same as installation address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LG_PostalStreet__c</fullName>
        <label>Postal Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_PreferredInstallationDate__c</fullName>
        <label>Preferred Installation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LG_PreferredInstallationTime__c</fullName>
        <label>Preferred Installation Time</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>08:00 - 13:00</fullName>
                </value>
                <value>
                    <fullName>12:00 - 18:00</fullName>
                </value>
                <value>
                    <fullName>18.00 - 21.00</fullName>
                </value>
                <value>
                    <fullName>Saturday 10.00 - 18.00</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_ResultofVisit__c</fullName>
        <label>Result of Visit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Quote Requested</fullName>
                </value>
                <value>
                    <fullName>Customer Approved</fullName>
                </value>
                <value>
                    <fullName>Customer Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_RunningUserSalesChannel__c</fullName>
        <formula>TEXT ($User.LG_SalesChannel__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Running User Sales Channel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_SBTelephonyId__c</fullName>
        <label>SB Telephony Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_SameAsAdminContact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A checkbox field to be used inside CSA. Custom logic attached to this field to copy values from admin contact to technical contact.</description>
        <label>Same as Admin Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LG_SelectedProducts__c</fullName>
        <description>Keeps a list of selected products during a MACD process</description>
        <label>Selected Products</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LG_SharedOfficeBuilding__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Shared Office Building</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LG_SuiteRoom__c</fullName>
        <label>Suite/Room</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_TechContactSameasBillingContact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Same as Billing Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LG_TechnicalContactDateofBirth__c</fullName>
        <label>Technical Contact Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LG_TechnicalContactEmail__c</fullName>
        <label>Technical Contact Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_TechnicalContactFirstName__c</fullName>
        <label>Technical Contact First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_TechnicalContactId__c</fullName>
        <label>Technical Contact Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_TechnicalContactLastName__c</fullName>
        <label>Technical Contact Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_TechnicalContactMiddleName__c</fullName>
        <label>Technical Contact Middle Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_TechnicalContactMobile__c</fullName>
        <label>Technical Contact Mobile</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_TechnicalContactPhone__c</fullName>
        <label>Technical Contact Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_TechnicalContactPicklist__c</fullName>
        <description>A picklist field to be used inside CSA.</description>
        <label>Technical Contact</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>(new Contact)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_TechnicalContactSalutation__c</fullName>
        <label>Technical Contact Salutation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mr.</fullName>
                </value>
                <value>
                    <fullName>Ms.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_Telephony__c</fullName>
        <label>Telephony</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                    <default>true</default>
                    <label>N/A</label>
                </value>
                <value>
                    <fullName>Keep</fullName>
                </value>
                <value>
                    <fullName>Terminate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_TotalOneOff__c</fullName>
        <description>Used as a rollup summary field for cscfga__One_Off_Charge__c field of the related cscfga__Product_Configuration__c objects</description>
        <label>Total One Off</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LG_TotalRecurringCharge__c</fullName>
        <description>Used as a rollup summary field for cscfga__Recurring_Charge__c field of the related cscfga__Product_Configuration__c objects</description>
        <label>Total Recurring Charge</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LG_UploadPortingNumbers__c</fullName>
        <formula>IF(ISBLANK(LG_SBTelephonyId__c),&apos;&apos;, HYPERLINK(&apos;/apex/c__LG_TelephonePorting?PCId=&apos; + LG_SBTelephonyId__c, &apos;Number porting upload needs to be done!&apos;))</formula>
        <label>Upload Porting Numbers</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_UsedQuoteObjects__c</fullName>
        <label>Used Quote Objects</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_ValidationDate__c</fullName>
        <label>Validation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LG_VisitAddressID__c</fullName>
        <label>Visit Address ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_VisitDescription__c</fullName>
        <label>Visit Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Product Baskets</relationshipLabel>
        <relationshipName>Product_Baskets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Priced_Quote_Valid_for_Days__c</fullName>
        <formula>BLANKVALUE(TEXT(csbb__Account__r.Priced_Quote_Valid_for_Days__c),&apos;30&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Priced Quote Valid for Days</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Created_Date__c</fullName>
        <formula>DATEVALUE( CreatedDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Quote_Expiry_Date__c</fullName>
        <formula>IF( TEXT(Quote_Stage__c) = &apos;Quoting&apos;, Quote_Created_Date__c + 30 , IF( AND(TEXT(Quote_Stage__c) = &apos;Synchronised&apos;, NOT( ISNULL( Account_Lapse_Date__c ) ) ), Account_Lapse_Date__c ,IF( AND(TEXT(Quote_Stage__c) = &apos;Quoted&apos;, NOT( ISNULL( Account_Lapse_Date__c ) ) ), Account_Lapse_Date__c ,IF( AND(TEXT(Quote_Stage__c) = &apos;Re-Priced&apos;, NOT( ISNULL( Account_Lapse_Date__c ) ) ), Account_Lapse_Date__c ,IF( AND(TEXT(Quote_Stage__c) = &apos;Synchronised&apos;, ISNULL( Account_Lapse_Date__c ) ), Quote_Created_Date__c +30 ,IF( AND(TEXT(Quote_Stage__c) = &apos;Quoted&apos;, ISNULL( Account_Lapse_Date__c ) ), Quote_Created_Date__c +30 ,IF( AND(TEXT(Quote_Stage__c) = &apos;Re-Priced&apos;, ISNULL( Account_Lapse_Date__c ) ), Quote_Created_Date__c +30 ,NULL)))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Quote_Stage__c</fullName>
        <label>Quote Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Quoting</fullName>
                </value>
                <value>
                    <fullName>Synchronised</fullName>
                </value>
                <value>
                    <fullName>Quoted</fullName>
                </value>
                <value>
                    <fullName>Re-Priced</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Won</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UM_ApprovalStatus__c</fullName>
        <formula>TEXT (cscfga__Opportunity__r.UM_Approval__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approval Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_BankAccountNumberBic__c</fullName>
        <label>BIC code</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_BankName__c</fullName>
        <label>Bank Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_DownsellApprovalRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Downsell Approval Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UM_IBANValid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IBAN Validated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UM_PartnerStates__c</fullName>
        <formula>IF( 
ISBLANK( cscfga__Opportunity__r.SF_Sales_Partner_ID_BW__c ) , 
IF(ISBLANK( cscfga__Opportunity__r.SF_Sales_Partner_ID_NRW_HSN__c ),&apos;&apos;,&apos;NRW,HSN&apos;), 
IF(ISBLANK( cscfga__Opportunity__r.SF_Sales_Partner_ID_NRW_HSN__c ),&apos;BW&apos;,&apos;BW,NRW,HSN&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner States</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_QuotingDate__c</fullName>
        <formula>cscfga__Opportunity__r.UM_QuotingDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quoting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UM_RunningUserUserType__c</fullName>
        <formula>TEXT ($User.UserType)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Running User User Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cfgoffline__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Product Baskets</relationshipLabel>
        <relationshipName>Product_Baskets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>csbb__Accessibility_Status__c</fullName>
        <description>Status of accessibility of the basket. The basket gets blocked when it is in the process of cloning (whether it is cloned or the clone itself).</description>
        <inlineHelpText>Status of accessibility of the basket. The basket gets blocked when it is in the process of cloning (whether it is cloned or the clone itself).</inlineHelpText>
        <label>Accessibility Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csbb__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Product Baskets</relationshipLabel>
        <relationshipName>Product_Baskets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>csbb__Includes_High_Level_Products__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Includes High Level Products</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>csbb__Optionals__c</fullName>
        <description>Additional information on the Product Basket record, used by CSBB.</description>
        <inlineHelpText>Additional information on the Product Basket record, used by CSBB.</inlineHelpText>
        <label>Optionals</label>
        <length>4096</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>csbb__Synchronised_With_Opportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Synchronised With Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cscfga__Basket_Status__c</fullName>
        <inlineHelpText>Displays status of the Basket.</inlineHelpText>
        <label>Basket Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Is Valid</fullName>
                </value>
                <value>
                    <fullName>Contains Errors</fullName>
                </value>
                <value>
                    <fullName>ContainsExpiredProducts</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cscfga__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Name of Opportunity this Basket is associated with.</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Product Baskets</relationshipLabel>
        <relationshipName>Product_Baskets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cscfga__Products_Id_Qty_In_Basket__c</fullName>
        <inlineHelpText>List of product IDs contained in this Basket.</inlineHelpText>
        <label>Products Id Qty In Basket</label>
        <length>8000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cscfga__Products_In_Basket__c</fullName>
        <inlineHelpText>List of Product Names contained in the Basket.</inlineHelpText>
        <label>Products Names In Basket</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cscfga__Shared_Context_Configuration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Product Configuration that is used as a Shared Context which is associated with this Basket.</inlineHelpText>
        <label>Shared Context Configuration</label>
        <referenceTo>cscfga__Product_Configuration__c</referenceTo>
        <relationshipLabel>Product Baskets</relationshipLabel>
        <relationshipName>Product_Baskets</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>